# cpp_project_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt
include/: manipulator.h  numeric.h
src/: CMakeLists.txt  main.cpp  manipulator.cpp  numeric.cpp
test/: CMakeLists.txt  run_all_tests.cpp  test_manipulator.cpp  test_numeric.cpp
